--- a/App/package.json
+++ b/App/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@microsoft/signalr": "^6.0.0",
     "ng-circle-progress": "^1.6.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
